--- a/src/com/ulatina/grupo5/vista/Menu_Empleado.form
+++ b/src/com/ulatina/grupo5/vista/Menu_Empleado.form
@@ -115,12 +115,12 @@
                           </Group>
                           <Group type="102" alignment="0" attributes="0">
                               <EmptySpace min="-2" pref="111" max="-2" attributes="0"/>
-                              <Component id="jButton_mantenimiento_atracciones_main_empleado" min="-2" pref="93" max="-2" attributes="0"/>
+                              <Component id="btnSeguimiento" min="-2" pref="93" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="113" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jButton_Buscar_Atraccio_Main_Empleado" alignment="1" min="-2" max="-2" attributes="0"/>
+                          <Component id="btnBuscar" alignment="1" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel_Buscar_Atracciones_Main_Empleado" alignment="1" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="143" max="-2" attributes="0"/>
@@ -138,11 +138,11 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
-                              <Component id="jButton_mantenimiento_atracciones_main_empleado" min="-2" pref="80" max="-2" attributes="0"/>
+                              <Component id="btnSeguimiento" min="-2" pref="80" max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                              <Component id="jButton_Buscar_Atraccio_Main_Empleado" min="-2" max="-2" attributes="0"/>
+                              <Component id="btnBuscar" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace type="unrelated" max="-2" attributes="0"/>
@@ -158,7 +158,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JButton" name="jButton_mantenimiento_atracciones_main_empleado">
+            <Component class="javax.swing.JButton" name="btnSeguimiento">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/proyecto/images/mantenimiento atra.png"/>
@@ -185,7 +185,7 @@
                 <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
               </AuxValues>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton_Buscar_Atraccio_Main_Empleado">
+            <Component class="javax.swing.JButton" name="btnBuscar">
               <Properties>
                 <Property name="contentAreaFilled" type="boolean" value="false"/>
               </Properties>
