--- a/src/com/ulatina/grupo5/vista/Menu_Admin.form
+++ b/src/com/ulatina/grupo5/vista/Menu_Admin.form
@@ -81,7 +81,6 @@
                           <Component id="jButton_add_atraccion_main_admin" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <Group type="102" attributes="0">
-                          <EmptySpace max="32767" attributes="0"/>
                           <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
                           <EmptySpace min="-2" pref="125" max="-2" attributes="0"/>
                           <Component id="jLabel2" min="-2" pref="76" max="-2" attributes="0"/>
@@ -196,6 +195,9 @@
         </Component>
         <Component class="javax.swing.JButton" name="jButton5_back_main_menu_admin">
           <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="3" name="/proyecto/images/previous1.png"/>
+            </Property>
             <Property name="contentAreaFilled" type="boolean" value="false"/>
           </Properties>
           <AuxValues>
