--- a/src/com/ulatina/grupo5/vista/Menu_Empleado.form
+++ b/src/com/ulatina/grupo5/vista/Menu_Empleado.form
@@ -197,6 +197,9 @@
             </Component>
             <Component class="javax.swing.JButton" name="btnBuscar">
               <Properties>
+                <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                  <Image iconType="3" name="/proyecto/images/add-attraction.png"/>
+                </Property>
                 <Property name="contentAreaFilled" type="boolean" value="false"/>
               </Properties>
               <AuxValues>
@@ -211,7 +214,7 @@
             <Component class="javax.swing.JButton" name="btnBookeo">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/proyecto/images/add-attraction.png"/>
+                  <Image iconType="3" name="/proyecto/images/parque-de-atracciones.png"/>
                 </Property>
                 <Property name="contentAreaFilled" type="boolean" value="false"/>
               </Properties>
