--- a/src/com/ulatina/grupo5/vista/PrecioView.form
+++ b/src/com/ulatina/grupo5/vista/PrecioView.form
@@ -53,9 +53,8 @@
                               <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="lblIdAtrac" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="jLabel2" alignment="0" min="-2" pref="62" max="-2" attributes="0"/>
-                              <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="18" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="txtIdPrecio" max="32767" attributes="0"/>
                               <Component id="txtDescrip" max="32767" attributes="0"/>
@@ -65,14 +64,6 @@
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="txtPrecio" min="-2" pref="209" max="-2" attributes="0"/>
                                       <Group type="102" alignment="0" attributes="0">
-                                          <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
-                                          <Group type="103" groupAlignment="0" attributes="0">
-                                              <Component id="ddlEdadMinPrecio" min="-2" pref="71" max="-2" attributes="0"/>
-                                              <Component id="ddlEdadMaxPrecio" min="-2" pref="64" max="-2" attributes="0"/>
-                                              <Component id="chboxActivo" alignment="0" min="-2" max="-2" attributes="0"/>
-                                          </Group>
-                                      </Group>
-                                      <Group type="102" alignment="0" attributes="0">
                                           <Component id="btnAgregarPrecio" min="-2" max="-2" attributes="0"/>
                                           <EmptySpace type="unrelated" max="-2" attributes="0"/>
                                           <Component id="btnActualizarPrecio" min="-2" pref="116" max="-2" attributes="0"/>
@@ -80,17 +71,20 @@
                                   </Group>
                               </Group>
                               <Component id="ddlAtracciones" alignment="0" max="32767" attributes="0"/>
+                              <Component id="ddlEdadMinPrecio" alignment="1" max="32767" attributes="0"/>
+                              <Component id="ddlEdadMaxPrecio" alignment="1" max="32767" attributes="0"/>
+                              <Component id="chboxActivo" alignment="1" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
-                  <EmptySpace pref="104" max="32767" attributes="0"/>
-                  <Component id="jScrollPane1" min="-2" pref="626" max="-2" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
+                  <Component id="jScrollPane1" min="-2" pref="664" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="384" max="-2" attributes="0"/>
                   <Component id="jLabel1" min="-2" pref="264" max="-2" attributes="0"/>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="434" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -121,25 +115,22 @@
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="txtPrecio" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
                           <Component id="chboxActivo" min="-2" max="-2" attributes="0"/>
-                          <EmptySpace type="separate" max="-2" attributes="0"/>
+                          <EmptySpace min="-2" pref="24" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
                               <Component id="ddlEdadMinPrecio" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
-                          <Group type="103" groupAlignment="3" attributes="0">
-                              <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="ddlEdadMaxPrecio" alignment="3" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="ddlEdadMaxPrecio" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
-                                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+                                  <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                                   <Component id="btnAgregarPrecio" min="-2" max="-2" attributes="0"/>
-                                  <EmptySpace min="0" pref="45" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="52" max="32767" attributes="0"/>
                               </Group>
-                              <Group type="102" alignment="1" attributes="0">
+                              <Group type="102" attributes="0">
                                   <EmptySpace max="32767" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
                                       <Component id="btnBackPrecios" alignment="1" min="-2" max="-2" attributes="0"/>
@@ -230,155 +221,23 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel6">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Edad M&#xed;nima:"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="jLabel7">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Edad M&#xe1;xima:"/>
+            <Property name="text" type="java.lang.String" value="Rango Edad:"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JComboBox" name="ddlEdadMinPrecio">
           <Properties>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="19">
-                <StringItem index="0" value="0"/>
-                <StringItem index="1" value="1"/>
-                <StringItem index="2" value="2"/>
-                <StringItem index="3" value="3"/>
-                <StringItem index="4" value="4"/>
-                <StringItem index="5" value="5"/>
-                <StringItem index="6" value="6"/>
-                <StringItem index="7" value="7"/>
-                <StringItem index="8" value="8"/>
-                <StringItem index="9" value="9"/>
-                <StringItem index="10" value="10"/>
-                <StringItem index="11" value="11"/>
-                <StringItem index="12" value="12"/>
-                <StringItem index="13" value="13"/>
-                <StringItem index="14" value="14"/>
-                <StringItem index="15" value="15"/>
-                <StringItem index="16" value="16"/>
-                <StringItem index="17" value="17"/>
-                <StringItem index="18" value="18"/>
+              <StringArray count="4">
+                <StringItem index="0" value="0 A&#xf1;os"/>
+                <StringItem index="1" value="Al menos 3 a&#xf1;os"/>
+                <StringItem index="2" value="Al menos 18 a&#xf1;os"/>
+                <StringItem index="3" value=" "/>
               </StringArray>
             </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ddlEdadMinPrecioActionPerformed"/>
           </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
-            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
-          </AuxValues>
-        </Component>
-        <Component class="javax.swing.JComboBox" name="ddlEdadMaxPrecio">
-          <Properties>
-            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="100">
-                <StringItem index="0" value="1"/>
-                <StringItem index="1" value="2"/>
-                <StringItem index="2" value="3"/>
-                <StringItem index="3" value="4"/>
-                <StringItem index="4" value="5"/>
-                <StringItem index="5" value="6"/>
-                <StringItem index="6" value="7"/>
-                <StringItem index="7" value="8"/>
-                <StringItem index="8" value="9"/>
-                <StringItem index="9" value="10"/>
-                <StringItem index="10" value="11"/>
-                <StringItem index="11" value="12"/>
-                <StringItem index="12" value="13"/>
-                <StringItem index="13" value="14"/>
-                <StringItem index="14" value="15"/>
-                <StringItem index="15" value="16"/>
-                <StringItem index="16" value="17"/>
-                <StringItem index="17" value="18"/>
-                <StringItem index="18" value="19"/>
-                <StringItem index="19" value="20"/>
-                <StringItem index="20" value="21"/>
-                <StringItem index="21" value="22"/>
-                <StringItem index="22" value="23"/>
-                <StringItem index="23" value="24"/>
-                <StringItem index="24" value="25"/>
-                <StringItem index="25" value="26"/>
-                <StringItem index="26" value="27"/>
-                <StringItem index="27" value="28"/>
-                <StringItem index="28" value="29"/>
-                <StringItem index="29" value="30"/>
-                <StringItem index="30" value="31"/>
-                <StringItem index="31" value="32"/>
-                <StringItem index="32" value="33"/>
-                <StringItem index="33" value="34"/>
-                <StringItem index="34" value="35"/>
-                <StringItem index="35" value="36"/>
-                <StringItem index="36" value="37"/>
-                <StringItem index="37" value="38"/>
-                <StringItem index="38" value="39"/>
-                <StringItem index="39" value="40"/>
-                <StringItem index="40" value="41"/>
-                <StringItem index="41" value="42"/>
-                <StringItem index="42" value="43"/>
-                <StringItem index="43" value="44"/>
-                <StringItem index="44" value="45"/>
-                <StringItem index="45" value="46"/>
-                <StringItem index="46" value="47"/>
-                <StringItem index="47" value="48"/>
-                <StringItem index="48" value="49"/>
-                <StringItem index="49" value="50"/>
-                <StringItem index="50" value="51"/>
-                <StringItem index="51" value="52"/>
-                <StringItem index="52" value="53"/>
-                <StringItem index="53" value="54"/>
-                <StringItem index="54" value="55"/>
-                <StringItem index="55" value="56"/>
-                <StringItem index="56" value="57"/>
-                <StringItem index="57" value="58"/>
-                <StringItem index="58" value="59"/>
-                <StringItem index="59" value="60"/>
-                <StringItem index="60" value="61"/>
-                <StringItem index="61" value="62"/>
-                <StringItem index="62" value="63"/>
-                <StringItem index="63" value="64"/>
-                <StringItem index="64" value="65"/>
-                <StringItem index="65" value="66"/>
-                <StringItem index="66" value="67"/>
-                <StringItem index="67" value="68"/>
-                <StringItem index="68" value="69"/>
-                <StringItem index="69" value="70"/>
-                <StringItem index="70" value="71"/>
-                <StringItem index="71" value="72"/>
-                <StringItem index="72" value="73"/>
-                <StringItem index="73" value="74"/>
-                <StringItem index="74" value="75"/>
-                <StringItem index="75" value="76"/>
-                <StringItem index="76" value="77"/>
-                <StringItem index="77" value="78"/>
-                <StringItem index="78" value="79"/>
-                <StringItem index="79" value="80"/>
-                <StringItem index="80" value="81"/>
-                <StringItem index="81" value="82"/>
-                <StringItem index="82" value="83"/>
-                <StringItem index="83" value="84"/>
-                <StringItem index="84" value="85"/>
-                <StringItem index="85" value="86"/>
-                <StringItem index="86" value="87"/>
-                <StringItem index="87" value="88"/>
-                <StringItem index="88" value="89"/>
-                <StringItem index="89" value="90"/>
-                <StringItem index="90" value="91"/>
-                <StringItem index="91" value="92"/>
-                <StringItem index="92" value="93"/>
-                <StringItem index="93" value="94"/>
-                <StringItem index="94" value="95"/>
-                <StringItem index="95" value="96"/>
-                <StringItem index="96" value="97"/>
-                <StringItem index="97" value="98"/>
-                <StringItem index="98" value="99"/>
-                <StringItem index="99" value="100"/>
-              </StringArray>
-            </Property>
-          </Properties>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
@@ -478,6 +337,24 @@
               <StringArray count="0"/>
             </Property>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+            <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
+          </AuxValues>
+        </Component>
+        <Component class="javax.swing.JComboBox" name="ddlEdadMaxPrecio">
+          <Properties>
+            <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
+              <StringArray count="3">
+                <StringItem index="0" value="Hasta 3 a&#xf1;os"/>
+                <StringItem index="1" value="Hasta 18 a&#xf1;os"/>
+                <StringItem index="2" value="Apto para todo p&#xfa;blico"/>
+              </StringArray>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ddlEdadMaxPrecioActionPerformed"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
             <AuxValue name="JavaCodeGenerator_VariableModifier" type="java.lang.Integer" value="1"/>
